--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,17 +28,13 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cupertino_icons: ^1.0.8
+  flame: 1.22.0
+  flame_audio: ^2.10.6
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
-  flame: 1.22.0
-
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -46,10 +42,11 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
+  flutter_test:
+    sdk: flutter
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter packages.
 flutter:
   # The following line ensures that the Material Icons font is
@@ -64,6 +61,10 @@ flutter:
     - assets/images/armas/
     - assets/images/profiles/
     - assets/images/effects/
+    - assets/audio/bg_music.MP3
+    - assets/audio/attack.mp3
+    - assets/audio/death.mp3
+    - assets/audio/gameover.mp3
     # - assets/images/backgrounds/
     # - assets/images/life/
     # - assets/images/foods/
@@ -71,13 +72,10 @@ flutter:
     # - assets/images/insects/
     # - assets/images/effects/
   #   - images/a_dot_ham.jpeg
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/to/asset-from-package
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
